--- a/TestClient/TestClient.csproj
+++ b/TestClient/TestClient.csproj
@@ -1,14 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <RootNamespace>DistIN</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BouncyCastle.Cryptography" Version="2.3.0" />
+    <ProjectReference Include="..\DistIN.Client\DistIN.Client.csproj" />
+    <ProjectReference Include="..\DistIN.Library\DistIN.Library.csproj" />
   </ItemGroup>
 
 </Project>
