--- a/DistIN.Application/Properties/launchSettings.json
+++ b/DistIN.Application/Properties/launchSettings.json
@@ -12,7 +12,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://*:7295;http://*:5157",
+      "applicationUrl": "https://localhost:7295;http://localhost:5157",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
